  can be selected with --audiocodec, for videos use --videocodec.
* Feature: Issue #109: Allow user defined file extensions for source files. By
  default, only standard extensions are accepted, i.e., mp4, ts, avi etc.
  Arbitrary file extensions can be defined now, e.g. using
  --extensions=xxx,abc,yxz,aaa to also convert files ending with .xxx, .abc and
  so on.
- Experimental: Issue #121: Added MKV support.  New format can be selected with --desttype=mkv.
- Bugfix: Issue #112: Fixed Docker detection.
- Bugfix: Issue #110: Docker build command failed, added missing libchardet
  and allow libdvdread4 or *8 to be used, whatever available.
- Bugfix: Fixed crash when video had no audio.
- Bugfix: Issue #112: Fix access problems with frame sets and HLS.
- Enhancement: Issue #67:  Enhance file size prediction,
- Bugfix: Syncronise screen log. Concurrent entries by separate flags created
  garbled output.
- Bugfix: Avoid creating an HLS segment number which is out of bounds
  (higher than the expected number of segments).

Important changes in 2.8 (2021-11-29):

* Bugfix: Issue #102: Not all SQL queries where case sensitive, causing cache
  confusion. Several database entries were created, but only one was updated.
  Made all queries case sensitive.
* Bugfix: Issue #91: Fixed HLS problems with cache causing garbled videos and
  hick-ups in audio. Make sure that the cache is clean when transcoding starts.
  There should be no remains left, all segments must be created or recreated
  anyway. Do not append to cache when writing. This caused cache files to
  become larger and larger.
* Enhancement: Issue #103: If requested HLS segment is less than X (adjustable)
  seconds away, discard seek request. Segment would be available very soon
  anyway, and that seek makes a re-transcode necessary. Can be set with
  --min_seek_time_diff. Defaults to 30 seconds.
* Feature: Issue #105: Added Free Lossless Audio Codec (FLAC) support.
  Activate with *--desttype=FLAC*.